--- a/app/src/main/res/navigation/create_kbs_pin.xml
+++ b/app/src/main/res/navigation/create_kbs_pin.xml
@@ -46,7 +46,7 @@
         <argument
             android:name="keyboard"
             android:defaultValue="NUMERIC"
-            app:argType="org.thoughtcrime.securesms.lock.v2.KbsKeyboardType"
+            app:argType="org.thoughtcrime.securesms.lock.v2.PinKeyboardType"
             app:nullable="false" />
 
     </fragment>
