--- a/app/src/main/res/layout/reactions_bottom_sheet_dialog_fragment_emoji_item.xml
+++ b/app/src/main/res/layout/reactions_bottom_sheet_dialog_fragment_emoji_item.xml
@@ -5,7 +5,7 @@
     android:layout_height="36dp"
     android:layout_marginStart="6dp"
     android:layout_marginTop="8dp"
-    android:layout_marginEnd="6dp"
+    android:layout_marginEnd="4dp"
     android:layout_marginBottom="8dp"
     android:gravity="center"
     android:orientation="horizontal">
@@ -14,6 +14,7 @@
         android:id="@+id/reactions_bottom_view_emoji_item_emoji"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="2dp"
         android:gravity="center"
         android:includeFontPadding="false"
         android:textSize="22dp"
@@ -25,12 +26,14 @@
         android:id="@+id/reactions_bottom_view_emoji_item_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="2dp"
         android:gravity="center"
         android:includeFontPadding="true"
         android:textColor="?title_text_color_primary"
         android:textSize="14dp"
         android:textStyle="bold"
+        android:textAllCaps="true"
         tools:ignore="SpUsage"
         tools:text="24" />
 </LinearLayout>
