--- a/app/src/main/res/layout/reactions_bottom_sheet_dialog_fragment_recipient_item.xml
+++ b/app/src/main/res/layout/reactions_bottom_sheet_dialog_fragment_recipient_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -24,9 +25,25 @@
         android:textColor="?title_text_color_primary"
         android:textSize="17sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/reactions_bottom_view_recipient_avatar"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/reactions_bottom_view_recipient_emoji"
+        app:layout_constraintStart_toEndOf="@id/reactions_bottom_view_recipient_avatar"
+        app:layout_constraintHorizontal_bias="0.0"
         tools:text="@tools:sample/full_names" />
+
+    <org.thoughtcrime.securesms.components.emoji.EmojiTextView
+        android:id="@+id/reactions_bottom_view_recipient_emoji"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:gravity="center"
+        android:textSize="22dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:ignore="SpUsage" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
