--- a/app/src/main/res/navigation/kbs_migration.xml
+++ b/app/src/main/res/navigation/kbs_migration.xml
@@ -17,7 +17,14 @@
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" >
+
+            <argument
+                app:argType="boolean"
+                android:name="is_pin_change"
+                android:defaultValue="false" />
+
+        </action>
 
     </fragment>
 
