Handle presenting KBS account locked cases.

--- a/app/src/main/res/navigation/registration.xml
+++ b/app/src/main/res/navigation/registration.xml
@@ -157,12 +157,7 @@
         android:id="@+id/accountLockedFragment"
         android:name="org.thoughtcrime.securesms.registration.fragments.AccountLockedFragment"
         android:label="fragment_account_locked"
-        tools:layout="@layout/account_locked_fragment">
-
-        <argument
-            android:name="timeRemaining"
-            app:argType="long" />
-    </fragment>
+        tools:layout="@layout/account_locked_fragment"/>
 
     <fragment
         android:id="@+id/captchaFragment"
