--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -336,6 +336,7 @@
     <declare-styleable name="EmojiTextView">
         <attr name="scaleEmojis" format="boolean" />
         <attr name="emoji_maxLength" format="integer" />
+        <attr name="emoji_forceCustom" format="boolean" />
     </declare-styleable>
 
     <declare-styleable name="RingtonePreference">
