--- a/app/src/main/res/layout/reactions_bottom_sheet_dialog_fragment_emoji_item.xml
+++ b/app/src/main/res/layout/reactions_bottom_sheet_dialog_fragment_emoji_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="62dp"
     android:layout_height="36dp"
     android:layout_marginStart="6dp"
@@ -19,6 +20,7 @@
         android:includeFontPadding="false"
         android:textSize="22dp"
         android:textStyle="bold"
+        app:emoji_forceCustom="true"
         tools:ignore="SpUsage"
         tools:text=":-)" />
 
