--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -272,7 +272,7 @@
         <item name="emoji_category_activity">@drawable/ic_emoji_activity_light_20</item>
         <item name="emoji_category_places">@drawable/ic_emoji_travel_light_20</item>
         <item name="emoji_category_objects">@drawable/ic_emoji_object_light_20</item>
-        <item name="emoji_category_symbol">@drawable/ic_emoji_symbol_light_20</item>
+        <item name="emoji_category_symbols">@drawable/ic_emoji_symbol_light_20</item>
         <item name="emoji_category_flags">@drawable/ic_emoji_flag_light_20</item>
         <item name="emoji_category_emoticons">@drawable/ic_emoji_emoticon_light_20</item>
         <item name="emoji_variation_selector_background">@drawable/emoji_variation_selector_background_light</item>
@@ -576,7 +576,7 @@
         <item name="emoji_category_activity">@drawable/ic_emoji_activity_dark_20</item>
         <item name="emoji_category_places">@drawable/ic_emoji_travel_dark_20</item>
         <item name="emoji_category_objects">@drawable/ic_emoji_object_dark_20</item>
-        <item name="emoji_category_symbol">@drawable/ic_emoji_symbol_dark_20</item>
+        <item name="emoji_category_symbols">@drawable/ic_emoji_symbol_dark_20</item>
         <item name="emoji_category_flags">@drawable/ic_emoji_flag_dark_20</item>
         <item name="emoji_category_emoticons">@drawable/ic_emoji_emoticon_dark_20</item>
         <item name="emoji_variation_selector_background">@drawable/emoji_variation_selector_background_dark</item>
