--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -368,6 +368,10 @@
         <item name="message_request_text_color_primary">@color/core_grey_90</item>
         <item name="message_request_text_color_secondary">@color/core_grey_60</item>
 
+        <item name="avatar_selection_take_photo">@drawable/ic_camera_outline_24</item>
+        <item name="avatar_selection_pick_photo">@drawable/ic_photo_outline_24</item>
+        <item name="avatar_selection_remove_photo">@drawable/ic_trash_outline_24</item>
+
         <item name="conversation_icon_attach_audio">@drawable/ic_audio_light</item>
         <item name="conversation_icon_attach_video">@drawable/ic_video_light</item>
 
@@ -630,6 +634,10 @@
         <item name="message_request_dialog_button_background">@drawable/message_request_button_background_dark</item>
         <item name="message_request_text_color_primary">@color/core_grey_05</item>
         <item name="message_request_text_color_secondary">@color/core_grey_25</item>
+
+        <item name="avatar_selection_take_photo">@drawable/ic_camera_solid_24</item>
+        <item name="avatar_selection_pick_photo">@drawable/ic_photo_solid_24</item>
+        <item name="avatar_selection_remove_photo">@drawable/ic_trash_solid_24</item>
 
         <item name="conversation_icon_attach_audio">@drawable/ic_audio_dark</item>
         <item name="conversation_icon_attach_video">@drawable/ic_video_dark</item>
