Fix some dark theme text contrast issues.

--- a/app/src/main/res/layout/preference_right_summary_widget.xml
+++ b/app/src/main/res/layout/preference_right_summary_widget.xml
@@ -10,6 +10,6 @@
               android:layout_gravity="right|center_vertical"
               android:gravity="right|center_vertical"
               android:textSize="16sp"
-              android:textColor="@color/core_ultramarine"/>
+              android:textColor="?colorAccent"/>
 
 </FrameLayout>
