--- a/app/src/main/res/values/core_colors.xml
+++ b/app/src/main/res/values/core_colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="core_ultramarine">#2c6bed</color>
-    <color name="core_ultramarine_light">#2c6bed</color>
+    <color name="core_ultramarine_light">#6191f3</color>
     <color name="core_ultramarine_dark">#1851b4</color>
     <color name="core_ultramarine_icon">#3a76f0</color>
     <color name="core_ultramarine_33">#552c6bed</color>
