--- a/app/src/main/res/layout/group_recipient_list_item.xml
+++ b/app/src/main/res/layout/group_recipient_list_item.xml
@@ -25,14 +25,14 @@
         android:textColor="?title_text_color_primary"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/recipient_avatar"
-        app:layout_constraintEnd_toStartOf="@+id/popupMenu"
+        app:layout_constraintEnd_toStartOf="@+id/popupMenuProgressContainer"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toEndOf="@+id/recipient_avatar"
         app:layout_constraintTop_toTopOf="@+id/recipient_avatar"
         tools:text="@tools:sample/full_names" />
 
-    <org.thoughtcrime.securesms.groups.ui.PopupMenuView
-        android:id="@+id/popupMenu"
+    <FrameLayout
+        android:id="@+id/popupMenuProgressContainer"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginEnd="16dp"
@@ -40,6 +40,27 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
+        tools:visibility="visible">
+
+        <org.thoughtcrime.securesms.groups.ui.PopupMenuView
+            android:id="@+id/popupMenu"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginEnd="16dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible" />
+
+        <ProgressBar
+            android:id="@+id/menuBusyProgress"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:indeterminate="true"
+            android:visibility="gone"
+            tools:visibility="visible" />
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
